// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/skeleton SkeletonAvatar should render shallow component ok 1`] = `
.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div
  className="emotion-0 emotion-1"
  shape="circle"
  style={Object {}}
/>
`;

exports[`components/skeleton SkeletonButton should render shallow component ok 1`] = `
.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 36px;
  width: 36px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div
  className="emotion-0 emotion-1"
  style={Object {}}
/>
`;

exports[`components/skeleton SkeletonGrid should render shallow component ok 1`] = `
.emotion-3 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -10px;
}

.emotion-19 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
}

.emotion-7 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0;
  margin-left: 25px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
  margin-top: 10px;
  margin-left: 0;
  position: relative;
  background: white;
  box-sizing: content-box;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  border: 1px solid rgb(238,244,250);
  border-radius: 5px;
  box-shadow: none;
}

.emotion-5:hover {
  box-shadow: none;
}

.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 24px;
  width: 50%;
  margin-top: 10px;
  margin-left: 0;
  border-radius: 0;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-11 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 50%;
  margin-top: 10px;
  margin-left: 0;
  border-radius: 0;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-11:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div
  className="emotion-2 emotion-19"
  style={Object {}}
>
  <div
    className="emotion-2 emotion-7"
    style={Object {}}
  >
    <div
      className="emotion-4 emotion-5"
      onClick={undefined}
      style={Object {}}
    >
      <div
        className="emotion-2 emotion-3"
        style={Object {}}
      >
        <div
          className="emotion-0 emotion-1"
          size={14}
          style={Object {}}
        />
      </div>
    </div>
  </div>
  <div
    className="emotion-2 emotion-7"
    style={Object {}}
  >
    <div
      className="emotion-4 emotion-5"
      onClick={undefined}
      style={Object {}}
    >
      <div
        className="emotion-2 emotion-3"
        style={Object {}}
      >
        <div
          className="emotion-0 emotion-1"
          style={Object {}}
        />
        <div
          className="emotion-0 emotion-11"
          size={14}
          style={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonGrid should render shallow component ok 2`] = `
.emotion-3 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 36px;
  width: 36px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-3:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 50%;
  border-radius: 0;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-19 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  border-bottom: 1px solid rgb(238,244,250);
}

.emotion-5 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1100px;
  margin: 0 auto;
  width: 1100px;
  height: 80px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid rgb(238,244,250);
}

.emotion-15 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0px auto;
  width: 1100px;
}

.emotion-13 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
  height: 46px;
}

.emotion-7 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 50%;
  margin-top: 0;
  margin-left: 25px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-7:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-55 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-53 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 50px auto;
  width: 1100px;
}

.emotion-51 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
}

.emotion-29 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
  padding-top: 75px;
  padding-bottom: 150px;
  margin-top: 0;
  margin-left: 25px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  background: white;
  box-sizing: content-box;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  border: 1px solid rgb(238,244,250);
  border-radius: 5px;
  box-shadow: none;
}

.emotion-29:hover {
  box-shadow: none;
}

.emotion-27 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -25px;
}

.emotion-21 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 80px;
  width: 80px;
  margin-top: 25px;
  margin-left: 0;
  border-radius: 50%;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-21:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-23 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 14%;
  margin-top: 25px;
  margin-left: 0;
  border-radius: 0;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-23:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-25 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 20%;
  margin-top: 25px;
  margin-left: 0;
  border-radius: 0;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-25:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div>
  <div
    className="emotion-18 emotion-19"
    style={Object {}}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="emotion-0 emotion-1"
        style={Object {}}
      />
      <div
        className="emotion-0 emotion-3"
        style={Object {}}
      />
    </div>
    <div
      className="emotion-16 emotion-17"
      style={Object {}}
    >
      <div
        className="emotion-12 emotion-15"
        style={Object {}}
      >
        <div
          className="emotion-12 emotion-13"
          style={Object {}}
        >
          <div
            className="emotion-0 emotion-7"
            style={Object {}}
          />
          <div
            className="emotion-0 emotion-7"
            style={Object {}}
          />
          <div
            className="emotion-0 emotion-7"
            style={Object {}}
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-12 emotion-55"
    style={Object {}}
  >
    <div
      className="emotion-12 emotion-53"
      style={Object {}}
    >
      <div
        className="emotion-12 emotion-51"
        style={Object {}}
      >
        <div
          className="emotion-28 emotion-29"
          onClick={undefined}
          style={Object {}}
        >
          <div
            className="emotion-12 emotion-27"
            style={Object {}}
          >
            <div
              className="emotion-0 emotion-21"
              shape="circle"
              style={Object {}}
            />
            <div
              className="emotion-0 emotion-23"
              style={Object {}}
            />
            <div
              className="emotion-0 emotion-25"
              style={Object {}}
            />
          </div>
        </div>
        <div
          className="emotion-28 emotion-29"
          onClick={undefined}
          style={Object {}}
        >
          <div
            className="emotion-12 emotion-27"
            style={Object {}}
          >
            <div
              className="emotion-0 emotion-21"
              shape="circle"
              style={Object {}}
            />
            <div
              className="emotion-0 emotion-23"
              style={Object {}}
            />
            <div
              className="emotion-0 emotion-25"
              style={Object {}}
            />
          </div>
        </div>
        <div
          className="emotion-28 emotion-29"
          onClick={undefined}
          style={Object {}}
        >
          <div
            className="emotion-12 emotion-27"
            style={Object {}}
          >
            <div
              className="emotion-0 emotion-21"
              shape="circle"
              style={Object {}}
            />
            <div
              className="emotion-0 emotion-23"
              style={Object {}}
            />
            <div
              className="emotion-0 emotion-25"
              style={Object {}}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonList should render shallow component ok 1`] = `
.emotion-25 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -10px;
}

.emotion-7 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 25px;
  margin-top: 10px;
  margin-left: 0;
  position: relative;
  background: white;
  box-sizing: content-box;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  border: 1px solid rgb(238,244,250);
  border-radius: 5px;
  box-shadow: none;
}

.emotion-7:hover {
  box-shadow: none;
}

.emotion-5 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
  overflow: hidden;
}

.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 20%;
  margin-top: 0;
  margin-left: 25px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-3 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 10%;
  margin-top: 0;
  margin-left: 25px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-3:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div
  className="emotion-4 emotion-25"
  style={Object {}}
>
  <div
    className="emotion-6 emotion-7"
    onClick={undefined}
    style={Object {}}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="emotion-0 emotion-1"
        style={Object {}}
      />
      <div
        className="emotion-0 emotion-3"
        style={Object {}}
      />
    </div>
  </div>
  <div
    className="emotion-6 emotion-7"
    onClick={undefined}
    style={Object {}}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="emotion-0 emotion-1"
        style={Object {}}
      />
      <div
        className="emotion-0 emotion-3"
        style={Object {}}
      />
    </div>
  </div>
  <div
    className="emotion-6 emotion-7"
    onClick={undefined}
    style={Object {}}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="emotion-0 emotion-1"
        style={Object {}}
      />
      <div
        className="emotion-0 emotion-3"
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonText should render shallow component ok 1`] = `
.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 50%;
  border-radius: 0;
  background-color: rgb(238,244,250);
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-1xksri5 1s infinite 2s;
  animation: animation-1xksri5 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div
  className="emotion-0 emotion-1"
  style={Object {}}
/>
`;
